--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # Runs at 2:00 AM UTC every day
     - cron: '0 2 * * *'
-  workflow_dispatch: # Allows you to run this manually from the Actions tab
+  workflow_dispatch: # Allows manual run
 
 jobs:
   backup:
@@ -13,22 +13,25 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install PostgreSQL Client
+      # THIS IS THE NEW FIX: Force install Postgres 16 Client
+      - name: Install PostgreSQL 16 Client
         run: |
+          sudo apt-get install -y wget gnupg2
+          sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+          wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
           sudo apt-get update
-          sudo apt-get install -y postgresql-client
+          sudo apt-get install -y postgresql-client-16
 
       - name: Dump Database
         env:
-          # This pulls the secret you just created
           DB_URL: ${{ secrets.SUPABASE_DB_URL }}
         run: |
-          # Uses pg_dump to save the DB to a file named backup.sql
-          pg_dump "$DB_URL" -f backup.sql
+          # The -v flag adds verbose logging
+          pg_dump "$DB_URL" -f backup.sql --clean --if-exists --no-owner --no-privileges
 
       - name: Upload to GitHub Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: supabase-backup
           path: backup.sql
-          retention-days: 30 # Keeps backups for 30 days to save space
+          retention-days: 30
